@@ -90,7 +90,7 @@ public class CustomerDAO extends AbstractDataBase<Customer> {
                 throw new RuntimeException(e);
             }
             return id == customer.getId() && id > 0;
-        }).map(RowData::getRowIndex).toList());
+        }).map(RowData::getRowIndex).collect(Collectors.toList()));
 
         // 要从后往前删除，要不然前面的删了之后， 后面的记录就会顶上来， 到时候row index就变了
         rowIndexList.sort(Comparator.reverseOrder());
@@ -112,7 +112,7 @@ public class CustomerDAO extends AbstractDataBase<Customer> {
                 throw new RuntimeException(e);
             }
             return id == customer.getId() && id > 0;
-        }).toList();
+        }).collect(Collectors.toList());
 
         if (CollectionUtils.isEmpty(rowDataList)) {
             return 0;
